# StoryEvals

./: .gitignore  .pre-commit-config.yaml  README.md  batch_processor.py  character_enricher.py  character_identification_pipeline.py  character_identifier.py  config.py  critique_agent.py  data_processor.py  hello.py  main.py  models.py  pyproject.toml  quick_test.py  setup_precommit.py  story_evals_results.json  unique_proj_ids.csv  utils.py  video_shot_processing_pipeline.py  video_shot_processor.py
.cursor/rules/: info.mdc
data/: rnadom.json  saved_videos.csv  unique_proj_ids.csv
data/cleaned_data/: 0-project_ids.json  1-clips_by_proj_id.json  2-full_video_with_clips_by_proj_id.json  3-character_vault_with_full_video_with_clips_by_proj_id.json  [partial]-ordered-character_vault_with_full_video_with_clips_by_proj_id.json
data/cleanup_helpers/: 3 - transform_with_character_vault.py  data_processor.py  streamlit_clip_manager_simple.py  transform_data.py
data/logs/: 1-enriched_characters.json  2-character_identification_results.json  2-video_shots_with_crops.json
data/logs/sxm/: pipeline_log.txt  pipeline_summary.json
data/logs/sxm-logs/: pipeline_log.txt
data/logs/test_run_20/: pipeline_log.txt  pipeline_summary.json
docs/: CHARACTER_IDENTIFICATION_README.md  CRITIQUE_AGENT_INTEGRATION.md
shubham/: scene_detect_compare.py
tests/scripts/: test_character_enricher.py  test_critique_agent.py  test_enricher_vault_format.py  test_video_shot_processing_input_output.py  test_video_shot_processing_real.py
utils/: __init__.py  image_processor.py
visualizer/: README.md  extract_keyframes.py  process_results.py  run_viewer.py  streamlit_viewer.py
(+37 files in other folders)
